# il-ripassone

./: .gitignore  DIPA_L19_compito_template.xlsx  LICENSE  README.md  domande_esempio.xlsx  main.py  pyproject.toml
mockups/: README.md  admin.html  display.html  team_answer.html  team_choose.html
src/ripassone/: app.py  auth.py  config.py  excel.py  models.py  state.py  ws.py
static/css/: cartoon.css  serious.css  serius.css
templates/: admin.html  base.html  display.html  info.html  login.html  team.html
