[project]
name = "ripassone"
version = "0.1.0"
description = "Il Ripassone — quiz interattivo per il corso DIPA, Master Diritto per l'Innovazione, Università di Udine"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.26",
    "qrcode>=8.2",
    "uvicorn[standard]>=0.46.0",
]
